modified:   17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb

--- a/17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -113,8 +113,8 @@
     "{\n",
     "\n",
     "    //|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||\n",
-    "    // An internal class that describes a node’s structure and is visible \n",
-    "    // only within the primary Binary Search Tree class. \n",
+    "    // An internal class that describes a node’s structure \n",
+    "    // and is visible only within the primary Binary Search Tree class. \n",
     "    // Implements the IComparable interface in order to support comparisons \n",
     "    // between node values and can uphold the rules for a BST.\n",
     "    //|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||\n",
@@ -196,8 +196,19 @@
     "\n",
     "\n",
     "\n",
-    "    // FIELD DEFINITIONS ----------------------------------------------------------------\n",
+    "    // FIELD DEFINITION ----------------------------------------------------------------\n",
     "    private BinarySearchTreeNode<T> root; \n",
+    "    //-----------------------------------------------------------------------------------\n",
+    "\n",
+    "\n",
+    "\n",
+    "    // PROPERTY DEFINITION ----------------------------------------------------------------\n",
+    "    public BinarySearchTreeNode<T> Root\n",
+    "    {\n",
+    "        // read-only\n",
+    "        get\n",
+    "        { return this.root; }\n",
+    "    }     \n",
     "    //-----------------------------------------------------------------------------------\n",
     "\n",
     "\n",
@@ -217,7 +228,7 @@
     "    private BinarySearchTreeNode<T> InsertNode( \n",
     "        T valueToInsert, \n",
     "        BinarySearchTreeNode<T> parentNode, \n",
-    "        BinarySearchTreeNode<T> currentNode  )\n",
+    "        BinarySearchTreeNode<T> currentNode   )\n",
     "    {\n",
     "\n",
     "        // If the node we are currently visiting is null:\n",
@@ -307,8 +318,104 @@
     "        \n",
     "    }\n",
     "    //-----------------------------------------------------------------------------------\n",
+    "    //-------------------------------- U T I L I T Y ------------------------------------\n",
+    "    // Traverses the BST, beginning at a specefied node, recursively printing each value\n",
+    "    // using an inorder traversal sequentialization\n",
+    "    public void PrintTreeInorder( BinarySearchTreeNode<T> currentNode )\n",
+    "    {\n",
+    "\n",
+    "        // If the current node is not null,\n",
+    "        // It's value has yet to be printed, \n",
+    "        // so we must perform an inorder traversal \n",
+    "        if( currentNode != null )\n",
+    "        {\n",
+    "\n",
+    "            // We start by recurring in the current's node's left child\n",
+    "            PrintTreeInorder( currentNode.leftChild ); \n",
+    "\n",
+    "\n",
+    "            // We may then print the current node's value,\n",
+    "            // taking care to append a buffer space \n",
+    "            // to provide separation between the printed values\n",
+    "            Console.Write( currentNode + \" \" );\n",
+    "\n",
+    "\n",
+    "            // We then finish by recuring in the node's right child\n",
+    "            PrintTreeInorder( currentNode.rightChild );       \n",
+    "\n",
+    "        }\n",
+    "    }  \n",
+    "\n",
     "\n",
     "}   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "BinarySearchTree<string> fruitBST = new BinarySearchTree<string>();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "foreach( string fruit in new string[] {\"apple\", \"orange\", \"pineapple\", \"plumb\", \"nectarine\", \"grape\"} )\n",
+    "{\n",
+    "    fruitBST.Insert( fruit );\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple grape nectarine orange pineapple plumb "
+     ]
+    }
+   ],
+   "source": [
+    "fruitBST.PrintTreeInorder( fruitBST.Root )"
    ]
   }
  ],
