modified:   17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb

--- a/17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb
@@ -202,17 +202,6 @@
     "\n",
     "\n",
     "\n",
-    "    // PROPERTY DEFINITION ----------------------------------------------------------------\n",
-    "    public BinarySearchTreeNode<T> Root\n",
-    "    {\n",
-    "        // read-only\n",
-    "        get\n",
-    "        { return this.root; }\n",
-    "    }     \n",
-    "    //-----------------------------------------------------------------------------------\n",
-    "\n",
-    "\n",
-    "\n",
     "    // CONSTRUCTOR ----------------------------------------------------------------------\n",
     "    public BinarySearchTree()\n",
     "    {\n",
@@ -318,10 +307,37 @@
     "        \n",
     "    }\n",
     "    //-----------------------------------------------------------------------------------\n",
-    "    //-------------------------------- U T I L I T Y ------------------------------------\n",
-    "    // Traverses the BST, beginning at a specefied node, recursively printing each value\n",
+    "    //-------------------------------- U T I L I T Y ------------------------------------ \n",
+    "    // Traverses the BST, beginning at a specified node, recursively printing each value\n",
+    "    // using preorder traversal sequentialization\n",
+    "    private void PrintPreorder( BinarySearchTreeNode<T> currentNode )\n",
+    "    {\n",
+    "\n",
+    "        // If the current node is not null,\n",
+    "        // It's value has yet to be printed, \n",
+    "        // so we must perform a preorder traversal \n",
+    "        if( currentNode != null )\n",
+    "        {\n",
+    "\n",
+    "            // We start by printing the current node's value,\n",
+    "            // taking care to append a buffer space \n",
+    "            // to provide separation between the printed values\n",
+    "            Console.Write( currentNode + \" \" );\n",
+    "\n",
+    "\n",
+    "            // We then continue by recurring in the current's node's left child\n",
+    "            PrintPreorder( currentNode.leftChild ); \n",
+    "\n",
+    "\n",
+    "            // We then finish by recuring in the node's right child\n",
+    "            PrintPreorder( currentNode.rightChild );       \n",
+    "\n",
+    "        }\n",
+    "    }  \n",
+    "    //////////////////////////////////////////////////////////////////////////////////////\n",
+    "    // Traverses the BST, beginning at a specified node, recursively printing each value\n",
     "    // using an inorder traversal sequentialization\n",
-    "    public void PrintTreeInorder( BinarySearchTreeNode<T> currentNode )\n",
+    "    private void PrintInorder( BinarySearchTreeNode<T> currentNode )\n",
     "    {\n",
     "\n",
     "        // If the current node is not null,\n",
@@ -331,7 +347,7 @@
     "        {\n",
     "\n",
     "            // We start by recurring in the current's node's left child\n",
-    "            PrintTreeInorder( currentNode.leftChild ); \n",
+    "            PrintInorder( currentNode.leftChild ); \n",
     "\n",
     "\n",
     "            // We may then print the current node's value,\n",
@@ -341,11 +357,119 @@
     "\n",
     "\n",
     "            // We then finish by recuring in the node's right child\n",
-    "            PrintTreeInorder( currentNode.rightChild );       \n",
+    "            PrintInorder( currentNode.rightChild );       \n",
     "\n",
     "        }\n",
-    "    }  \n",
     "\n",
+    "    }\n",
+    "    //////////////////////////////////////////////////////////////////////////////////////\n",
+    "    // Traverses the BST, beginning at a specified node, recursively printing each value\n",
+    "    // using an inorder traversal sequentialization\n",
+    "    private void PrintPostorder( BinarySearchTreeNode<T> currentNode )\n",
+    "    {\n",
+    "\n",
+    "        // If the current node is not null,\n",
+    "        // It's value has yet to be printed, \n",
+    "        // so we must perform an inorder traversal \n",
+    "        if( currentNode != null )\n",
+    "        {\n",
+    "\n",
+    "            // We start by recurring in the current's node's left child\n",
+    "            PrintPostorder( currentNode.leftChild ); \n",
+    "\n",
+    "\n",
+    "            // We then continue by recuring in the node's right child\n",
+    "            PrintPostorder( currentNode.rightChild );       \n",
+    "\n",
+    "\n",
+    "            // We may then print the current node's value,\n",
+    "            // taking care to append a buffer space \n",
+    "            // to provide separation between the printed values\n",
+    "            Console.Write( currentNode + \" \" );\n",
+    "\n",
+    "        }\n",
+    "\n",
+    "    }\n",
+    "    //////////////////////////////////////////////////////////////////////////////////////\n",
+    "    // Traverses the BST, starting at it's root,\n",
+    "    // printing each node value according to the sequentialization pattern specified\n",
+    "    public void PrintBST( string sequentializationPattern = \"inorder\")\n",
+    "    {\n",
+    "\n",
+    "        // Upon switching bewteen possible outcomes\n",
+    "        // extending from converting the specified sequentialization patttern\n",
+    "        // to it's lower case form:\n",
+    "        switch( sequentializationPattern.ToLower() )\n",
+    "        {\n",
+    "\n",
+    "            // If it is the case that the specified sequentialization pattern\n",
+    "            // calls for a preorder traversal:\n",
+    "            case \"preorder\":\n",
+    "\n",
+    "                // Print a message indicating the specified sequentialization pattern\n",
+    "                Console.WriteLine(\"Preorder traversal:\");\n",
+    "\n",
+    "                // Traverse the BST, beginning at the root, \n",
+    "                // recursively printing each value\n",
+    "                // using preorder traversal sequentialization \n",
+    "                PrintPreorder( this.root );\n",
+    "\n",
+    "                // stop evaluating for any further conditions\n",
+    "                break;\n",
+    "\n",
+    "\n",
+    "            // If it is the case that the specified sequentialization pattern\n",
+    "            // calls for an inorder traversal:\n",
+    "            case \"inorder\":\n",
+    "\n",
+    "                // Print a message indicating the specified sequentialization pattern\n",
+    "                Console.WriteLine(\"Inorder traversal:\");\n",
+    "\n",
+    "                // Traverse the BST, beginning at the root, \n",
+    "                // recursively printing each value\n",
+    "                // using preordinorderer traversal sequentialization \n",
+    "                PrintInorder( this.root );\n",
+    "\n",
+    "                // stop evaluating for any further conditions\n",
+    "                break;\n",
+    "\n",
+    "\n",
+    "            // If it is the case that the specified sequentialization pattern\n",
+    "            // calls for an postorder traversal:\n",
+    "            case \"postorder\":\n",
+    "\n",
+    "                // Print a message indicating the specified sequentialization pattern\n",
+    "                Console.WriteLine(\"Postorder traversal:\");\n",
+    "\n",
+    "                // Traverse the BST, beginning at the root, \n",
+    "                // recursively printing each value\n",
+    "                // using preorder traversal sequentialization \n",
+    "                PrintPostorder( this.root );\n",
+    "\n",
+    "                // stop evaluating for any further conditions\n",
+    "                break;\n",
+    "\n",
+    "\n",
+    "            // If no sequentialization pattern is specified,\n",
+    "            // or if one is specified that does not align to the appropriate\n",
+    "            // criteria which defines the traversal options: \n",
+    "            default:\n",
+    "            \n",
+    "                // Print a message indicating the specified sequentialization pattern\n",
+    "                Console.WriteLine(\"Postorder traversal:\");\n",
+    "\n",
+    "                // Traverse the BST, beginning at the root, \n",
+    "                // recursively printing each value\n",
+    "                // using inorder traversal sequentialization \n",
+    "                PrintInorder( this.root );\n",
+    "\n",
+    "                // stop evaluating for any further conditions\n",
+    "                break;\n",
+    "\n",
+    "        }\n",
+    "\n",
+    "    }  \n",
+    "    //-----------------------------------------------------------------------------------\n",
     "\n",
     "}   "
    ]
@@ -410,12 +534,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "apple grape nectarine orange pineapple plumb "
+      "Preorder traversal:\n",
+      "apple orange nectarine grape pineapple plumb "
      ]
     }
    ],
    "source": [
-    "fruitBST.PrintTreeInorder( fruitBST.Root )"
+    "fruitBST.PrintBST(\"preorder\")"
    ]
   }
  ],
