modified:   17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb

--- a/17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb
@@ -309,8 +309,8 @@
     "    //-----------------------------------------------------------------------------------\n",
     "    //-------------------------------- U T I L I T Y ------------------------------------ \n",
     "    // Traverses the BST, beginning at a specified node, recursively printing each value\n",
-    "    // using preorder traversal sequentialization\n",
-    "    private void PrintPreorder( BinarySearchTreeNode<T> currentNode )\n",
+    "    // using preorder traversal pattern\n",
+    "    private void TraversePreorder( BinarySearchTreeNode<T> currentNode )\n",
     "    {\n",
     "\n",
     "        // If the current node is not null,\n",
@@ -326,18 +326,18 @@
     "\n",
     "\n",
     "            // We then continue by recurring in the current's node's left child\n",
-    "            PrintPreorder( currentNode.leftChild ); \n",
+    "            TraversePreorder( currentNode.leftChild ); \n",
     "\n",
     "\n",
     "            // We then finish by recuring in the node's right child\n",
-    "            PrintPreorder( currentNode.rightChild );       \n",
+    "            TraversePreorder( currentNode.rightChild );       \n",
     "\n",
     "        }\n",
     "    }  \n",
     "    //////////////////////////////////////////////////////////////////////////////////////\n",
     "    // Traverses the BST, beginning at a specified node, recursively printing each value\n",
-    "    // using an inorder traversal sequentialization\n",
-    "    private void PrintInorder( BinarySearchTreeNode<T> currentNode )\n",
+    "    // using an inorder traversal pattern\n",
+    "    private void TraverseInorder( BinarySearchTreeNode<T> currentNode )\n",
     "    {\n",
     "\n",
     "        // If the current node is not null,\n",
@@ -347,7 +347,7 @@
     "        {\n",
     "\n",
     "            // We start by recurring in the current's node's left child\n",
-    "            PrintInorder( currentNode.leftChild ); \n",
+    "            TraverseInorder( currentNode.leftChild ); \n",
     "\n",
     "\n",
     "            // We may then print the current node's value,\n",
@@ -357,15 +357,15 @@
     "\n",
     "\n",
     "            // We then finish by recuring in the node's right child\n",
-    "            PrintInorder( currentNode.rightChild );       \n",
+    "            TraverseInorder( currentNode.rightChild );       \n",
     "\n",
     "        }\n",
     "\n",
     "    }\n",
     "    //////////////////////////////////////////////////////////////////////////////////////\n",
     "    // Traverses the BST, beginning at a specified node, recursively printing each value\n",
-    "    // using an inorder traversal sequentialization\n",
-    "    private void PrintPostorder( BinarySearchTreeNode<T> currentNode )\n",
+    "    // using an inorder traversal pattern\n",
+    "    private void TraversePostorder( BinarySearchTreeNode<T> currentNode )\n",
     "    {\n",
     "\n",
     "        // If the current node is not null,\n",
@@ -375,11 +375,11 @@
     "        {\n",
     "\n",
     "            // We start by recurring in the current's node's left child\n",
-    "            PrintPostorder( currentNode.leftChild ); \n",
+    "            TraversePostorder( currentNode.leftChild ); \n",
     "\n",
     "\n",
     "            // We then continue by recuring in the node's right child\n",
-    "            PrintPostorder( currentNode.rightChild );       \n",
+    "            TraversePostorder( currentNode.rightChild );       \n",
     "\n",
     "\n",
     "            // We may then print the current node's value,\n",
@@ -392,76 +392,92 @@
     "    }\n",
     "    //////////////////////////////////////////////////////////////////////////////////////\n",
     "    // Traverses the BST, starting at it's root,\n",
-    "    // printing each node value according to the sequentialization pattern specified\n",
-    "    public void PrintBST( string sequentializationPattern = \"inorder\")\n",
+    "    // printing each node value according to the traversal pattern specified\n",
+    "    public void TraverseBST( string traversalPattern = \"inorder\" )\n",
     "    {\n",
     "\n",
-    "        // Upon switching bewteen possible outcomes\n",
-    "        // extending from converting the specified sequentialization patttern\n",
-    "        // to it's lower case form:\n",
-    "        switch( sequentializationPattern.ToLower() )\n",
+    "        // Define an array of valid arguments which may be used to invoke the method\n",
+    "        string[] validArguments = new string[]\n",
+    "        { \n",
+    "            \"preorder\",\n",
+    "            \"inorder\",\n",
+    "            \"postorder\",\n",
+    "            String.Empty \n",
+    "        };\n",
+    "\n",
+    "\n",
+    "        // If it is determined that the specified traversal pattern,\n",
+    "        // after being converted to it's lowercase form,\n",
+    "        // is not contained within the array of valid arguments:\n",
+    "        if( ! validArguments.Contains( traversalPattern.ToLower() ) )\n",
     "        {\n",
     "\n",
-    "            // If it is the case that the specified sequentialization pattern\n",
+    "            // Throw an exception providing guidance on which arguments are acceptable.\n",
+    "            throw new ArgumentException(\n",
+    "                @\" \n",
+    "                Invalid input.\n",
+    "\n",
+    "                You must specify one of the following traversal patterns:\n",
+    "                    - preorder\n",
+    "                    - inorder\n",
+    "                    - postorder\n",
+    "\n",
+    "                You may also pass no input, which will default to an inorder traversal.\n",
+    "                \"\n",
+    "            );\n",
+    "\n",
+    "        }\n",
+    "\n",
+    "\n",
+    "        // Upon switching bewteen possible outcomes\n",
+    "        // extending from converting the specified traversal patttern\n",
+    "        // to it's lower case form:\n",
+    "        switch( traversalPattern.ToLower() )\n",
+    "        {\n",
+    "\n",
+    "            // If it is the case that the specified traversal pattern\n",
     "            // calls for a preorder traversal:\n",
     "            case \"preorder\":\n",
     "\n",
-    "                // Print a message indicating the specified sequentialization pattern\n",
-    "                Console.WriteLine(\"Preorder traversal:\");\n",
+    "                // Print a message indicating the specified traversal pattern\n",
+    "                Console.WriteLine(\"preorder traversal:\");\n",
     "\n",
     "                // Traverse the BST, beginning at the root, \n",
     "                // recursively printing each value\n",
-    "                // using preorder traversal sequentialization \n",
-    "                PrintPreorder( this.root );\n",
+    "                // using preorder traversal pattern \n",
+    "                TraversePreorder( this.root );\n",
     "\n",
     "                // stop evaluating for any further conditions\n",
     "                break;\n",
     "\n",
     "\n",
-    "            // If it is the case that the specified sequentialization pattern\n",
+    "            // If it is the case that the specified traversal pattern\n",
     "            // calls for an inorder traversal:\n",
     "            case \"inorder\":\n",
     "\n",
-    "                // Print a message indicating the specified sequentialization pattern\n",
-    "                Console.WriteLine(\"Inorder traversal:\");\n",
+    "                // Print a message indicating the specified traversal pattern\n",
+    "                Console.WriteLine(\"inorder traversal:\");\n",
     "\n",
     "                // Traverse the BST, beginning at the root, \n",
     "                // recursively printing each value\n",
-    "                // using preordinorderer traversal sequentialization \n",
-    "                PrintInorder( this.root );\n",
+    "                // using preordinorderer traversal pattern \n",
+    "                TraverseInorder( this.root );\n",
     "\n",
     "                // stop evaluating for any further conditions\n",
     "                break;\n",
     "\n",
     "\n",
-    "            // If it is the case that the specified sequentialization pattern\n",
+    "            // If it is the case that the specified traversal pattern\n",
     "            // calls for an postorder traversal:\n",
     "            case \"postorder\":\n",
     "\n",
-    "                // Print a message indicating the specified sequentialization pattern\n",
-    "                Console.WriteLine(\"Postorder traversal:\");\n",
+    "                // Print a message indicating the specified traversal pattern\n",
+    "                Console.WriteLine(\"postorder traversal:\");\n",
     "\n",
     "                // Traverse the BST, beginning at the root, \n",
     "                // recursively printing each value\n",
-    "                // using preorder traversal sequentialization \n",
-    "                PrintPostorder( this.root );\n",
-    "\n",
-    "                // stop evaluating for any further conditions\n",
-    "                break;\n",
-    "\n",
-    "\n",
-    "            // If no sequentialization pattern is specified,\n",
-    "            // or if one is specified that does not align to the appropriate\n",
-    "            // criteria which defines the traversal options: \n",
-    "            default:\n",
-    "            \n",
-    "                // Print a message indicating the specified sequentialization pattern\n",
-    "                Console.WriteLine(\"Postorder traversal:\");\n",
-    "\n",
-    "                // Traverse the BST, beginning at the root, \n",
-    "                // recursively printing each value\n",
-    "                // using inorder traversal sequentialization \n",
-    "                PrintInorder( this.root );\n",
+    "                // using preorder traversal pattern \n",
+    "                TraversePostorder( this.root );\n",
     "\n",
     "                // stop evaluating for any further conditions\n",
     "                break;\n",
@@ -534,13 +550,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Preorder traversal:\n",
+      "preorder traversal:\n",
       "apple orange nectarine grape pineapple plumb "
      ]
     }
    ],
    "source": [
-    "fruitBST.PrintBST(\"preorder\")"
+    "fruitBST.TraverseBST(\"PreOrder\")"
    ]
   }
  ],
