modified:   17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb

--- a/17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb
@@ -190,13 +190,212 @@
     "\n",
     "        }\n",
     "        //-------------------------------------------------------------------------------\n",
-    "        //|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||\n",
     "\n",
     "    }\n",
+    "    //|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||\n",
+    "    \n",
+    "\n",
+    "\n",
+    "    //|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||\n",
+    "    // An internal class which facilitates displaying the complete structure of the BST\n",
+    "    //|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||\n",
+    "    internal class TreePrinter\n",
+    "    {\n",
+    "\n",
+    "        //|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||\n",
+    "        // An internal class representing the lines which connect nodes within the BST\n",
+    "        //|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||\n",
+    "        internal class NodeConnector\n",
+    "        {\n",
+    "            \n",
+    "            // FIELD DEFINITIONS --------------------------------------------------------\n",
+    "            internal NodeConnector previousConnector;\n",
+    "            internal string str;\n",
+    "            //---------------------------------------------------------------------------\n",
+    "        \n",
+    "\n",
+    "\n",
+    "            // CONSTRUCTOR -------------------------------------------------------------\n",
+    "            internal NodeConnector(NodeConnector previousConnector, string str)\n",
+    "            {\n",
+    "                this.previousConnector = previousConnector;\n",
+    "                this.str = str;\n",
+    "            }\n",
+    "            //---------------------------------------------------------------------------\n",
+    "\n",
+    "        };\n",
+    "        //|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||\n",
     "\n",
     "\n",
     "\n",
-    "    // FIELD DEFINITION ----------------------------------------------------------------\n",
+    "        // METHODS ----------------------------------------------------------------------\n",
+    "        //------------------------------ U T I L I T Y ----------------------------------\n",
+    "        // Recursively prints a string representation of the connections bewteen nodes \n",
+    "        internal static void showNodeConnectors( NodeConnector currentNodeConnector )\n",
+    "        {\n",
+    "\n",
+    "            // If the current node connector is null:\n",
+    "            if ( currentNodeConnector == null ) \n",
+    "            {\n",
+    "\n",
+    "                // All existing node connections have been printed,\n",
+    "                // so we may now exit the method accordingly \n",
+    "                return;\n",
+    "\n",
+    "            }\n",
+    "\n",
+    "            // Otherwise, there's still more connections between nodes \n",
+    "            // which have yet to be accounter for,\n",
+    "            // so we continue the recursion \n",
+    "            // with the referece to the current node connectors's previous connector\n",
+    "            showNodeConnectors( currentNodeConnector.previousConnector );\n",
+    "\n",
+    "\n",
+    "            // Print the string representation \n",
+    "            // of the current node connectors which have been assembled so far \n",
+    "            Console.Write( currentNodeConnector.str );\n",
+    "\n",
+    "        }\n",
+    "        ////////////////////////////////////////////////////////////////////////////////\n",
+    "        // Traverses the Tree to recursively construct it's string representation\n",
+    "        internal static void printTree(\n",
+    "            BinarySearchTreeNode<T> currentNode, \n",
+    "            NodeConnector previousConnector, \n",
+    "            bool isRight               )\n",
+    "        {\n",
+    "\n",
+    "            // If the current node is null:\n",
+    "            if ( currentNode == null )\n",
+    "            {\n",
+    "\n",
+    "                // We have already fully travesed the tree \n",
+    "                // and printed it's full string representation,\n",
+    "                // so we may now exit the method accordingly \n",
+    "                return;\n",
+    "\n",
+    "            }\n",
+    "    \n",
+    "\n",
+    "            // Otherwise, \n",
+    "            // there's still nodes in the Tree that have yet to be accounted for,\n",
+    "            // so we initially set the previous connector string\n",
+    "            // to represent an intermediate sepration interval\n",
+    "            string previousConnectorString = \"    \";\n",
+    "\n",
+    "\n",
+    "            // We then instatiate a new node connector,\n",
+    "            // taking as its arguments \n",
+    "            // the specified reference to the previous node connector\n",
+    "            // and the initial seperation space designated above\n",
+    "            NodeConnector currentNodeConnector = new NodeConnector(\n",
+    "                previousConnector, \n",
+    "                previousConnectorString\n",
+    "            );\n",
+    "    \n",
+    "\n",
+    "            // We now initiate traversal of the node structure\n",
+    "            // by first recurring in the current node's right child,\n",
+    "            // while redesignating the current node's connector\n",
+    "            // as the previous node connector \n",
+    "            printTree( currentNode.rightChild, currentNodeConnector, true );\n",
+    "    \n",
+    "\n",
+    "            // If we determine at is point that the previous connector is null:\n",
+    "            if ( previousConnector == null ) \n",
+    "            {\n",
+    "\n",
+    "                // Then we have either arrived at the root of the entire tree\n",
+    "                // or else the root of a subtree,\n",
+    "                // so we designate the appropriate string representation\n",
+    "                // of such a node connection\n",
+    "                currentNodeConnector.str = \"———\";\n",
+    "\n",
+    "            }\n",
+    "\n",
+    "\n",
+    "            // Conversely,\n",
+    "            // If it were determined that the current node \n",
+    "            // is a right child anscestor to it's parent node:\n",
+    "            else if ( isRight ) \n",
+    "            {\n",
+    "\n",
+    "                // We designate the appropriate string representation\n",
+    "                // of a right child's node connection\n",
+    "                currentNodeConnector.str = \".———\";\n",
+    "                \n",
+    "                \n",
+    "                // We then designate the previous connector's \n",
+    "                // string representation as a \"branch\" \n",
+    "                // which extends from the right side of the parent node \n",
+    "                previousConnectorString = \"   |\";\n",
+    "\n",
+    "            }\n",
+    "\n",
+    "\n",
+    "            // Otherwise,\n",
+    "            // We must have the case that the current node \n",
+    "            // is a left child anscestor to it's parent node:\n",
+    "            else \n",
+    "            {\n",
+    "\n",
+    "\n",
+    "                // We designate the appropriate string representation\n",
+    "                // of a left child's node connection\n",
+    "                currentNodeConnector.str = \"`———\";\n",
+    "\n",
+    "\n",
+    "                // We then designate the previous connector's \n",
+    "                // as being equivalent to the previous node connection\n",
+    "                previousConnector.str = previousConnectorString;\n",
+    "            \n",
+    "            }\n",
+    "    \n",
+    "            // After all that,\n",
+    "            // we have successfully built a string representation\n",
+    "            // for the current section of Tree\n",
+    "\n",
+    "\n",
+    "            // We may now recursively print a string representation \n",
+    "            // of the connections bewteen nodes \n",
+    "            showNodeConnectors( currentNodeConnector );\n",
+    "            \n",
+    "            \n",
+    "            // We then print node value itself, \n",
+    "            // taking care to prepend a space for separation\n",
+    "            Console.WriteLine( \" \" + currentNode.value );\n",
+    "    \n",
+    "\n",
+    "            // If the previous connector is not null:\n",
+    "            if ( previousConnector != null ) \n",
+    "            {\n",
+    "\n",
+    "                // Then we have not yet arrived at the root of a subtree,\n",
+    "                // so we designate the appropriate string representation\n",
+    "                // as being equivalent to the previous node connection\n",
+    "                previousConnector.str = previousConnectorString;\n",
+    "\n",
+    "            }\n",
+    "\n",
+    "\n",
+    "             // We then designate the previous connector's \n",
+    "            // string representation as a \"branch\" \n",
+    "            // which extends from the parent node\n",
+    "            currentNodeConnector.str = \"   |\";\n",
+    "    \n",
+    "            \n",
+    "            // We then continue by recurring in the current node's left child,\n",
+    "            // while redesignating the current node's connector\n",
+    "            printTree( currentNode.leftChild, currentNodeConnector, false );\n",
+    "        \n",
+    "        }\n",
+    "        //-------------------------------------------------------------------------------\n",
+    "        \n",
+    "    }\n",
+    "    //|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||\n",
+    "\n",
+    "\n",
+    "\n",
+    "    // FIELD DEFINITION -----------------------------------------------------------------\n",
     "    private BinarySearchTreeNode<T> root; \n",
     "    //-----------------------------------------------------------------------------------\n",
     "\n",
@@ -295,7 +494,7 @@
     "        return currentNode;\n",
     "\n",
     "    }\n",
-    "    //|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||\n",
+    "    /////////////////////////////////////////////////////////////////////////////////////\n",
     "    // Inserts the specified value appropriately within the BST\n",
     "    public void Insert( T valueToInsert )\n",
     "    {\n",
@@ -484,7 +683,13 @@
     "\n",
     "        }\n",
     "\n",
-    "    }  \n",
+    "    }\n",
+    "    /////////////////////////////////////////////////////////////////////////////////////  \n",
+    "    // Prints a string representation of the full BST \n",
+    "    public void printBST()\n",
+    "    {\n",
+    "        TreePrinter.printTree( this.root, null, false);    \n",
+    "    }\n",
     "    //-----------------------------------------------------------------------------------\n",
     "\n",
     "}   "
@@ -506,7 +711,7 @@
    },
    "outputs": [],
    "source": [
-    "BinarySearchTree<string> fruitBST = new BinarySearchTree<string>();"
+    "BinarySearchTree<int> randomNumberBST = new BinarySearchTree<int>();"
    ]
   },
   {
@@ -525,9 +730,9 @@
    },
    "outputs": [],
    "source": [
-    "foreach( string fruit in new string[] {\"apple\", \"orange\", \"pineapple\", \"plumb\", \"nectarine\", \"grape\"} )\n",
+    "for( int i = 0; i < 15; i++)\n",
     "{\n",
-    "    fruitBST.Insert( fruit );\n",
+    "    randomNumberBST.Insert( new Random().Next(1, 100) );\n",
     "}"
    ]
   },
@@ -550,13 +755,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "preorder traversal:\n",
-      "apple orange nectarine grape pineapple plumb "
+      "inorder traversal:\n",
+      "2 12 14 16 30 31 35 49 52 63 74 84 96 "
      ]
     }
    ],
    "source": [
-    "fruitBST.TraverseBST(\"PreOrder\")"
+    "randomNumberBST.TraverseBST()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            .——— 96\n",
+      "        .——— 84\n",
+      "    .——— 74\n",
+      "   |   |    .——— 63\n",
+      "   |    `——— 52\n",
+      "   |        `——— 49\n",
+      "——— 35\n",
+      "   |            .——— 31\n",
+      "   |        .——— 30\n",
+      "   |    .——— 16\n",
+      "   |   |   |    .——— 14\n",
+      "   |   |    `——— 12\n",
+      "    `——— 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "randomNumberBST.printBST()"
    ]
   }
  ],
