modified:   17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb

--- a/17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb
@@ -563,13 +563,13 @@
     "    }\n",
     "    //////////////////////////////////////////////////////////////////////////////////////\n",
     "    // Traverses the BST, beginning at a specified node, recursively printing each value\n",
-    "    // using an inorder traversal pattern\n",
+    "    // using an postorder traversal pattern\n",
     "    private void TraversePostorder( BinarySearchTreeNode<T> currentNode )\n",
     "    {\n",
     "\n",
     "        // If the current node is not null,\n",
     "        // It's value has yet to be printed, \n",
-    "        // so we must perform an inorder traversal \n",
+    "        // so we must perform an postorder traversal \n",
     "        if( currentNode != null )\n",
     "        {\n",
     "\n",
